[update] Modify the location of 3rdparty library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_CXX_STANDARD 11)
 
-OPTION(pginf_build_tests "Build all of pginf's own tests." ON)
-OPTION(pginf_build_with_debuginfo "Build pginf with DEBUG-INFO" ON)
+OPTION(pginf_build_tests "Build all of pginf's own tests." OFF)
+OPTION(pginf_build_with_debuginfo "Build pginf with DEBUG-INFO" OFF)
 
 IF (pginf_build_with_debuginfo)
     SET(CMAKE_BUILD_TYPE RelWithDebInfo)
@@ -39,7 +39,6 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 # add sub-project
-ADD_SUBDIRECTORY(tinyxml)
 ADD_SUBDIRECTORY(pginf)
 
 # add googletest
