--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,66 +1,51 @@
-﻿CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
+﻿cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
-PROJECT(pginf VERSION 0.1)
+project(pginf VERSION 0.1 LANGUAGES CXX)
 
-MESSAGE( STATUS "CMAKE_C_COMPILER_ID = ${CMAKE_C_COMPILER_ID}" )
-MESSAGE( STATUS "CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}" )
+message( STATUS "CMAKE_C_COMPILER_ID = ${CMAKE_C_COMPILER_ID}" )
+message( STATUS "CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}" )
 
-MESSAGE( STATUS "CMAKE_C_COMPILER = ${CMAKE_C_COMPILER}" )
-MESSAGE( STATUS "CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}" )
-MESSAGE( STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}" )
+message( STATUS "CMAKE_C_COMPILER = ${CMAKE_C_COMPILER}" )
+message( STATUS "CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}" )
+message( STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}" )
 
-MESSAGE( STATUS "CMAKE_HOST_SYSTEM: ${CMAKE_HOST_SYSTEM} ")
+message( STATUS "CMAKE_HOST_SYSTEM: ${CMAKE_HOST_SYSTEM} ")
 
-SET(CMAKE_INCLUDE_CURRENT_DIR ON)
-SET(CMAKE_CXX_STANDARD_REQUIRED ON)
-SET(CMAKE_CXX_STANDARD 11)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 11)
 
-OPTION(pginf_build_tests "Build all of pginf's own tests." OFF)
-OPTION(pginf_build_with_debuginfo "Build pginf with DEBUG-INFO" OFF)
-
-IF (pginf_build_with_debuginfo)
-    SET(CMAKE_BUILD_TYPE RelWithDebInfo)
-    IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -ggdb -pthread")
-    ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2 /DEBUG /Zi /EHa")
-    ENDIF()
-ELSE()
-    SET(CMAKE_BUILD_TYPE MinSizeRel)
-    IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -pthread")
-    ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2 /EHa")
-    ENDIF()
-ENDIF()
- 
-# add 3rd lib
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
-LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
-
-# add sub-project
-ADD_SUBDIRECTORY(pginf)
-
-# add googletest
-if (pginf_build_tests)
-
-    INCLUDE(FetchContent)
-    FetchContent_Declare(
-        googletest
-        GIT_REPOSITORY https://github.com/google/googletest.git
-        GIT_TAG release-1.12.1
-    )
-
-    IF(CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
- 
-        # For Windows: Prevent overriding the parent project's compiler/linker settings
-        SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-        FetchContent_MakeAvailable(googletest)
- 
-    ENDIF()
-
-    # To enable test
-    ENABLE_TESTING()
-    INCLUDE(GoogleTest)
-
+if(NOT PGINF__LIBRARY_TYPE)
+    set(PGINF__LIBRARY_TYPE SHARED CACHE STRING "Set library type to SHARED/STATIC")
 endif()
+message( STATUS "PGINF__LIBRARY_TYPE: ${PGINF__LIBRARY_TYPE} ")
+
+if(NOT BUILD_TESTS)
+    option(BUILD_TESTS "Build all of own tests." OFF)
+endif()
+
+if(NOT BUILD_WITH_DEBUGINFO)
+    option(BUILD_WITH_DEBUGINFO "Build with DEBUG-INFO" OFF)
+endif()
+
+if(BUILD_WITH_DEBUGINFO)
+    add_definitions(-DPGINF_DEBUG)    
+    set(CMAKE_BUILD_TYPE Debug)
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -ggdb -pthread")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize-recover=address -fno-stack-protector -fno-omit-frame-pointer")
+    elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /DEBUG /Zi /EHa")
+    endif()
+else()
+    set(CMAKE_BUILD_TYPE MinSizeRel)
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -pthread")
+    elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2 /EHa")
+    endif()
+endif()
+
+message( STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE} ")
+
+add_subdirectory(pginf)
