--- a/pginf/tests/CMakeLists.txt
+++ b/pginf/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 project(pginf_tests)
 
-include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include/)
+include_directories(${CMAKE_SOURCE_DIR}/pginf/src ${CMAKE_SOURCE_DIR}/include/)
 
 file(GLOB_RECURSE ALL_TARGETS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
 
@@ -11,7 +11,7 @@ foreach(TARGET IN LISTS ALL_TARGETS)
     # get_filename_component(TARGET_DIR ${TARGET} DIRECTORY)
     get_filename_component(TARGET_NAME ${TARGET} NAME_WE)
     add_executable(${TARGET_NAME} ${TARGET})
-    target_link_libraries(${TARGET_NAME} pginf GTest::gtest_main)
+    target_link_libraries(${TARGET_NAME} pginf_base GTest::gtest_main)
     message( STATUS "Add test target[${TARGET_NAME}](${TARGET})")
     # add_test(NAME ${TARGET_NAME} COMMAND "${TARGET_NAME}" --build ${CMAKE_BINARY_DIR} --target ${TARGET_NAME})
     gtest_discover_tests(${TARGET_NAME})
