--- a/pginf/CMakeLists.txt
+++ b/pginf/CMakeLists.txt
@@ -1,13 +1,23 @@
 ﻿# Add header
 include_directories(${CMAKE_SOURCE_DIR}/pginf/src ${CMAKE_SOURCE_DIR}/include)
 
-# Add src
+# Add base's src
 file(GLOB_RECURSE PGINF_BASE_SOURCES "src/base/*.cc")
 
 # Add the source code to the project's executable。
 add_library(pginf_base ${PGINF__LIBRARY_TYPE} ${PGINF_BASE_SOURCES})
 
 target_link_libraries(pginf_base)
+
+
+# Add core's src
+file(GLOB_RECURSE PGINF_CORE_SOURCES "src/core/*.cc")
+
+# Add the source code to the project's executable。
+add_library(pginf_core ${PGINF__LIBRARY_TYPE} ${PGINF_CORE_SOURCES})
+
+target_link_libraries(pginf_core pginf_base)
+
 
 if(BUILD_TESTS)
 
